@@ -1,11 +1,5 @@
 use Test::Coverage;
 
-coverage-at-least 50;
-
-uncovered-at-most 40;
-
-source-with-coverage;
-
-report;
+must-be-complete;
 
 # vim: expandtab shiftwidth=4
